clusters/beryjuio-oci/policy-shrink-resource-requests.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: shrink-cpu-requests
spec:
  rules:
    - name: floor-cpu-requests
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-node-lease
                - kube-public
                - kyverno
                - istio-system
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                resources:
                  requests:
                    cpu: "1m"
            initContainers:
              - (name): "*"
                resources:
                  requests:
                    cpu: "1m"
